--- a/.github/workflows/deploy-pipeline-trigger.yaml
+++ b/.github/workflows/deploy-pipeline-trigger.yaml
@@ -11,6 +11,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      
+      - name: Install Tekton CLI
+        run: |
+          curl -LO https://github.com/tektoncd/cli/releases/download/v0.25.0/tkn_0.25.0_Linux_x86_64.tar.gz
+          sudo tar xvzf tkn_0.25.0_Linux_x86_64.tar.gz -C /usr/local/bin/ tkn
+
       - name: Trigger Tekton Promotion Pipeline
         run: |
           tkn pipeline start promotion-pipeline -n quarkus-ci \
