--- a/.github/workflows/build-pipeline-trigger.yaml
+++ b/.github/workflows/build-pipeline-trigger.yaml
@@ -17,6 +17,9 @@ jobs:
           curl -LO https://github.com/tektoncd/cli/releases/download/v0.25.0/tkn_0.25.0_Linux_x86_64.tar.gz
           sudo tar xvzf tkn_0.25.0_Linux_x86_64.tar.gz -C /usr/local/bin/ tkn
 
+      - name: Set up kubeconfig
+        run: echo "${{ secrets.KUBECONFIG }}" > $HOME/.kube/config
+
       - name: Trigger Tekton Pipeline
         run: |
           tkn pipeline start build-pipeline -n quarkus-ci \
