--- a/k8s/prod/deployment.yaml
+++ b/k8s/prod/deployment.yaml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
         - name: quarkus-app
-          image: your-dockerhub-username/quarkus-app:latest
+          image: arthurdbs/quarkus-app:latest
           ports:
             - containerPort: 8080
