--- a/.github/workflows/deploy-pipeline-trigger.yaml
+++ b/.github/workflows/deploy-pipeline-trigger.yaml
@@ -18,7 +18,9 @@ jobs:
           sudo tar xvzf tkn_0.25.0_Linux_x86_64.tar.gz -C /usr/local/bin/ tkn
 
       - name: Set up kubeconfig
-        run: echo "${{ secrets.KUBECONFIG }}" > $HOME/.kube/config
+        run: |
+          mkdir -p $HOME/.kube
+          echo "${{ secrets.KUBECONFIG }}" > $HOME/.kube/config
 
       - name: Trigger Tekton Promotion Pipeline
         run: |
