--- a/.github/workflows/deploy-pipeline-trigger.yaml
+++ b/.github/workflows/deploy-pipeline-trigger.yaml
@@ -21,6 +21,7 @@ jobs:
         run: |
           mkdir -p $HOME/.kube
           echo "${{ secrets.KUBECONFIG }}" > $HOME/.kube/config
+          export KUBECONFIG=$HOME/.kube/config
 
       - name: Trigger Tekton Promotion Pipeline
         run: |
