--- a/.github/workflows/build-pipeline-trigger.yaml
+++ b/.github/workflows/build-pipeline-trigger.yaml
@@ -1,4 +1,4 @@
-name: CD Deploy Pipeline
+name: CI Build Pipeline
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -21,8 +21,9 @@ jobs:
         run: |
           mkdir -p $HOME/.kube
           echo "${{ secrets.KUBECONFIG }}" > $HOME/.kube/config
+          export KUBECONFIG=$HOME/.kube/config
 
-      - name: Trigger Tekton Promotion Pipeline
+      - name: Trigger Tekton Pipeline
         run: |
-          tkn pipeline start promotion-pipeline -n quarkus-ci \
+          tkn pipeline start build-pipeline -n quarkus-ci \
             --workspace name=shared-workspace,claimName=your-pvc-name
