--- a/.github/workflows/build-pipeline-trigger.yaml
+++ b/.github/workflows/build-pipeline-trigger.yaml
@@ -26,4 +26,4 @@ jobs:
       - name: Trigger Tekton Pipeline
         run: |
           tkn pipeline start build-pipeline -n quarkus-ci \
-            --workspace name=shared-workspace,claimName=your-pvc-name
+            --workspace name=shared-workspace,volumeClaimTemplateFile=volume-claim-template.yaml
