--- a/.tekton/pipelines/build-pipeline.yaml
+++ b/.tekton/pipelines/build-pipeline.yaml
@@ -2,24 +2,42 @@ apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 metadata:
   name: build-pipeline
+  namespace: quarkus-ci
 spec:
+  workspaces:
+    - name: shared-workspace
   tasks:
     - name: lint
       taskRef:
         name: lint-task
+      workspaces:
+        - name: shared-workspace
+          workspace: shared-workspace
     - name: test
       taskRef:
         name: test-task
       runAfter: [lint]
+      workspaces:
+        - name: shared-workspace
+          workspace: shared-workspace
     - name: build
       taskRef:
         name: build-task
       runAfter: [test]
+      workspaces:
+        - name: shared-workspace
+          workspace: shared-workspace
     - name: push-image
       taskRef:
         name: push-image-task
       runAfter: [build]
+      workspaces:
+        - name: shared-workspace
+          workspace: shared-workspace
     - name: update-manifest
       taskRef:
         name: update-manifest-task
       runAfter: [push-image]
+      workspaces:
+        - name: shared-workspace
+          workspace: shared-workspace
