--- a/.argocd/applications/prod-app.yaml
+++ b/.argocd/applications/prod-app.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/thurdias/quarkus-cicd-ofc
+    repoURL: https://github.com/thurdias/quarkus-cicd-ofc.git
     targetRevision: HEAD
     path: k8s/prod
   destination:
