--- a/.github/workflows/build-pipeline-trigger.yaml
+++ b/.github/workflows/build-pipeline-trigger.yaml
@@ -1,4 +1,4 @@
-name: CI Build Pipeline
+name: CD Deploy Pipeline
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -23,7 +23,6 @@ jobs:
           echo "${{ secrets.KUBECONFIG }}" > $HOME/.kube/config
           export KUBECONFIG=$HOME/.kube/config
 
-      - name: Trigger Tekton Pipeline
+      - name: Apply PipelineRun for Promotion
         run: |
-          tkn pipeline start build-pipeline -n quarkus-ci \
-            --workspace name=shared-workspace,volumeClaimTemplateFile=volume-claim-template.yaml
+          kubectl apply -f promotion-pipeline-run.yaml
