--- a/.argocd/applications/prod-app.yaml
+++ b/.argocd/applications/prod-app.yaml
@@ -2,10 +2,11 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: quarkus-prod
+  namespace: argocd
 spec:
   project: default
   source:
-    repoURL: https://github.com/thurdias/quarkus-cicd-ofc.git
+    repoURL: https://github.com/my-org/quarkus-app.git
     targetRevision: HEAD
     path: k8s/prod
   destination:
