--- a/.tekton/duties/lint-task.yaml
+++ b/.tekton/duties/lint-task.yaml
@@ -2,7 +2,10 @@ apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
   name: lint-task
+  namespace: quarkus-ci
 spec:
+  workspaces:
+    - name: shared-workspace
   steps:
     - name: lint
       image: maven:3.6.3-jdk-8
