--- a/.tekton/pipelines/build-pipeline.yaml
+++ b/.tekton/pipelines/build-pipeline.yaml
@@ -6,10 +6,30 @@ metadata:
 spec:
   workspaces:
     - name: shared-workspace
+  params:
+    - name: repo-url
+      description: The URL of the Git repository to clone
+      type: string
+    - name: revision
+      description: The git revision (branch, tag, or commit) to clone
+      type: string
+      default: "main"
   tasks:
+    - name: git-clone
+      taskRef:
+        name: git-clone
+      workspaces:
+        - name: output
+          workspace: shared-workspace
+      params:
+        - name: url
+          value: $(params.repo-url)
+        - name: revision
+          value: $(params.revision)
     - name: lint
       taskRef:
         name: lint-task
+      runAfter: [git-clone]
       workspaces:
         - name: shared-workspace
           workspace: shared-workspace
