--- a/.tekton/duties/git-clone-task.yaml
+++ b/.tekton/duties/git-clone-task.yaml
@@ -5,19 +5,13 @@ metadata:
   namespace: quarkus-ci
 spec:
   workspaces:
-    - name: output
-  params:
-    - name: url
-      description: The URL of the Git repository to clone
-      type: string
-    - name: revision
-      description: The git revision (branch, tag, or commit) to clone
-      type: string
-      default: "main"
+    - name: shared-workspace
   steps:
     - name: clone
       image: alpine/git
       script: |
-        git clone $(params.url) $(workspaces.output.path)
-        cd $(workspaces.output.path)
-        git checkout $(params.revision)
+        git clone $(params.url) $(workspaces.shared-workspace.path)
+  params:
+    - name: url
+      type: string
+      description: The URL of the Git repository to clone
