--- a/.tekton/pipelines/build-pipeline.yaml
+++ b/.tekton/pipelines/build-pipeline.yaml
@@ -19,7 +19,7 @@ spec:
       taskRef:
         name: git-clone
       workspaces:
-        - name: output
+        - name: shared-workspace
           workspace: shared-workspace
       params:
         - name: url
@@ -28,14 +28,14 @@ spec:
           value: $(params.revision)
     - name: lint
       taskRef:
-        name: lint-task
+        name: lint-task  
       runAfter: [git-clone]
       workspaces:
         - name: shared-workspace
           workspace: shared-workspace
     - name: test
       taskRef:
-        name: test-task
+        name: test-task 
       runAfter: [lint]
       workspaces:
         - name: shared-workspace
@@ -49,14 +49,14 @@ spec:
           workspace: shared-workspace
     - name: push-image
       taskRef:
-        name: push-image-task
+        name: push-image-task 
       runAfter: [build]
       workspaces:
         - name: shared-workspace
           workspace: shared-workspace
     - name: update-manifest
       taskRef:
-        name: update-manifest-task
+        name: update-manifest-task 
       runAfter: [push-image]
       workspaces:
         - name: shared-workspace
