--- a/.tekton/pipelines/build-pipeline.yaml
+++ b/.tekton/pipelines/build-pipeline.yaml
@@ -19,27 +19,30 @@ spec:
       taskRef:
         name: git-clone
       workspaces:
-        - name: shared-workspace
+        - name: output
           workspace: shared-workspace
       params:
         - name: url
-          value: $(params.repo-url)
+          value: "$(params.repo-url)"
         - name: revision
-          value: $(params.revision)
+          value: "$(params.revision)"
+
     - name: lint
       taskRef:
-        name: lint-task  
+        name: lint-task
       runAfter: [git-clone]
       workspaces:
         - name: shared-workspace
           workspace: shared-workspace
+
     - name: test
       taskRef:
-        name: test-task 
+        name: test-task
       runAfter: [lint]
       workspaces:
         - name: shared-workspace
           workspace: shared-workspace
+
     - name: build
       taskRef:
         name: build-task
@@ -47,16 +50,18 @@ spec:
       workspaces:
         - name: shared-workspace
           workspace: shared-workspace
+
     - name: push-image
       taskRef:
-        name: push-image-task 
+        name: push-image-task
       runAfter: [build]
       workspaces:
         - name: shared-workspace
           workspace: shared-workspace
+
     - name: update-manifest
       taskRef:
-        name: update-manifest-task 
+        name: update-manifest-task
       runAfter: [push-image]
       workspaces:
         - name: shared-workspace
