--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@
                                         <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
                                         <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                                         <maven.home>${maven.home}</maven.home>
+                                        <failOnViolation>false</failOnViolation>
                                     </systemPropertyVariables>
                                 </configuration>
                             </execution>
