--- a/.tekton/duties/test-task.yaml
+++ b/.tekton/duties/test-task.yaml
@@ -10,4 +10,5 @@ spec:
     - name: test
       image: maven:3.6.3-jdk-8
       script: |
+        cd /workspace/shared-workspace/clone-dir
         mvn test
