--- a/.tekton/duties/test-task.yaml
+++ b/.tekton/duties/test-task.yaml
@@ -8,7 +8,7 @@ spec:
     - name: shared-workspace
   steps:
     - name: test
-      image: maven:3.6.3-jdk-17
+      image: maven:3.8.1-openjdk-17
       script: |
         cd /workspace/shared-workspace/clone-dir
         mvn test
