--- a/.argocd/applications/prod-app.yaml
+++ b/.argocd/applications/prod-app.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/my-org/quarkus-app.git
+    repoURL: https://github.com/thurdias/quarkus-cicd-ofc.git
     targetRevision: HEAD
     path: k8s/prod
   destination:
