--- a/k8s/stage/deployment.yaml
+++ b/k8s/stage/deployment.yaml
@@ -15,6 +15,8 @@ spec:
     spec:
       containers:
         - name: quarkus-app
-          image: arthurdbs/quarkus-app:test
+          image: docker.io/arthurdbs/quarkus-app:test
           ports:
             - containerPort: 8080
+      imagePullSecrets:
+      - name: docker-hub-secret
