--- a/k8s/stage/deployment.yaml
+++ b/k8s/stage/deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: quarkus-app
-          image: docker.io/arthurdbs/quarkus-app:test
+          image: docker.io/arthurdbs/quarkus-rh:test
           ports:
             - containerPort: 8080
       imagePullSecrets:
