--- a/.github/workflows/build-pipeline-trigger.yaml
+++ b/.github/workflows/build-pipeline-trigger.yaml
@@ -23,6 +23,11 @@ jobs:
           echo "${{ secrets.KUBECONFIG }}" > $HOME/.kube/config
           export KUBECONFIG=$HOME/.kube/config
 
+     - name: Delete Existing PipelineRun
+       run: |
+         oc delete pipelinerun build-pipeline-run || true
+         sleep 5
+
       - name: Apply PipelineRun for Build
         run: |
           oc apply -f .tekton/pipelines/run/build-pipeline-run.yaml
