--- a/.tekton/pipelines/run/build-pipeline-run.yaml
+++ b/.tekton/pipelines/run/build-pipeline-run.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
-  generateName: build-pipeline-run-
+  name: build-pipeline-run
   namespace: quarkus-ci
 spec:
   pipelineRef:
